modified activity layout, added searchview, handled searchview listeners, added utility methods, data class
TODO: VM, retrofit class, repository, api calls and rv impl

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">docquityAssignment</string>
+    <string name="enter_post_id">Enter Post ID</string>
+    <string name="sample_title">Sample Title</string>
 </resources>
